<resources>
    <string name="app_name">Music</string>

    <!--Item of list song-->
    <string name="imageViewSongItem">Image song</string>
    <string name="textViewSongName">Song Name</string>
    <string name="textViewArtist">Artist Name</string>
    <string name="textViewDuration">04:00</string>
    <string name="imageButtonMenuMore">Menu more</string>
    <string name="DescriptionTabLayout">Navigation between fragments</string>
    <string name="textViewEmptyList">The song was not found on the phone</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>