<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:background="@color/colorPrimaryGray">

    <ImageView
        android:id="@+id/imageViewSongItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:contentDescription="@string/imageViewSongItem"
        android:background="@drawable/icon_song"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        app:layout_constraintStart_toEndOf="@id/imageViewSongItem"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
    <TextView
        android:id="@+id/textViewSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewSongName"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        android:singleLine="true"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewDuration"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_gravity="start|center_vertical"
                android:layout_marginEnd="6dp"/>

            <TextView
                android:id="@+id/textViewArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewArtist"
                android:textSize="11sp"
                android:textColor="@color/white"
                android:layout_marginTop="3dp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonMenuMore"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@string/imageButtonMenuMore"
        android:src="@drawable/baseline_more"
        android:background="@color/colorPrimaryGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:foreground="?android:attr/selectableItemBackground"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>